default/objects/ERP__c/ERP__c.object-meta.xml
<CustomObject>
    <label>GFN</label>
    <nameField>
        <label>GFN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GFNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>