default/objects/ERP__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GFNs</relationshipLabel>
    <relationshipName>ERPs</relationshipName>
    <type>Lookup</type>
</CustomField>