default/objects/ERP__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>GFNs</relationshipLabel>
    <relationshipName>ERPs</relationshipName>
    <type>Lookup</type>
</CustomField>