default/objects/ERP__c/fields/ColCoID__c.field-meta.xml
<CustomField>
    <fullName>ColCoID__c</fullName>
    <label>ColCo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>