default/objects/ERP__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GFNs</relationshipLabel>
    <relationshipName>ERPs</relationshipName>
    <type>Lookup</type>
</CustomField>