default/objects/ERP__c/fields/GFN_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>GFN_Name_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFN Name</label>
    <type>Text</type>
</CustomField>