default/objects/ERP__c/fields/GFN_Nr__c.field-meta.xml
<CustomField>
    <fullName>GFN_Nr__c</fullName>
    <externalId>true</externalId>
    <label>GFN Nr</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>