default/objects/ERP__c/fields/GFN_Number__c.field-meta.xml
<CustomField>
    <fullName>GFN_Number__c</fullName>
    <externalId>true</externalId>
    <label>GFN Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>