default/objects/ERP__c/fields/Limit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Limit_Cards__c</fullName>
    <label>Limit Cards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>