default/objects/ERP__c/fields/PCMS_Number__c.field-meta.xml
<CustomField>
    <fullName>PCMS_Number__c</fullName>
    <label>PCMS Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>