default/objects/ERP__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>