default/objects/ERP__c/fields/Reset_Password_History__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_History__c</fullName>
    <label>Reset Password History</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>