default/objects/ERP__c/fields/Toll_Cards__c.field-meta.xml
<CustomField>
    <fullName>Toll_Cards__c</fullName>
    <label>Toll Cards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>