default/objects/ERP__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP</fullName>
                <label>GFN</label>
            </value>
            <value>
                <fullName>PCMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>