default/objects/ERP__c/fields/Umsatzsteuer_ID__c.field-meta.xml
<CustomField>
    <fullName>Umsatzsteuer_ID__c</fullName>
    <label>Umsatzsteuer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>