default/objects/ERP__c/fields/UTA_Card_number__c.field-meta.xml
<CustomField>
    <fullName>UTA_Card_number__c</fullName>
    <label>UTA Card number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>