default/objects/ERP__c/fields/UTA_Cards__c.field-meta.xml
<CustomField>
    <fullName>UTA_Cards__c</fullName>
    <label>UTA Cards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>