default/objects/ERP__c/recordTypes/CCS.recordType-meta.xml
<RecordType>
    <fullName>CCS</fullName>
    <active>true</active>
    <label>CCS</label>
</RecordType>