default/objects/ERP__c/recordTypes/SME.recordType-meta.xml
<RecordType>
    <fullName>SME</fullName>
    <active>true</active>
    <label>SME</label>
</RecordType>